force-app/main/default/objects/Project__c/fields/Client_brands__c.field-meta.xml
<CustomField>
    <fullName>Client_brands__c</fullName>
    <label>Client brands</label>
    <length>255</length>
    <type>Text</type>
</CustomField>