force-app/main/default/objects/Project__c/fields/Competitor_brands__c.field-meta.xml
<CustomField>
    <fullName>Competitor_brands__c</fullName>
    <label>Competitor brands</label>
    <length>255</length>
    <type>Text</type>
</CustomField>