force-app/main/default/objects/Project__c/fields/Data_Configured__c.field-meta.xml
<CustomField>
    <fullName>Data_Configured__c</fullName>
    <label>Data Configured</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Screen</fullName>
            </value>
            <value>
                <fullName>Module</fullName>
            </value>
            <value>
                <fullName>Question</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>