force-app/main/default/objects/Project__c/fields/Focused_HCO__c.field-meta.xml
<CustomField>
    <fullName>Focused_HCO__c</fullName>
    <label>Focused HCO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>