force-app/main/default/objects/Project__c/fields/Focused_HCP__c.field-meta.xml
<CustomField>
    <fullName>Focused_HCP__c</fullName>
    <label>Focused HCP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>